# PyAntiSpam

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README-Docker.md  README.md  config.yaml.example  docker-compose.yml  force_retrain.py  force_retrain_real.py  pyantispam  pyproject.toml  requirements.txt  show_stats.py  stats_cli.json  test_docker_retrain.sh
data/: blacklist.json  feature_scaler.pkl  spam_model.pkl  spam_stats.json  stats_export.json  training_data.json  whitelist.json
scripts/: docker-run.sh
src/pyantispam/: __init__.py  cli.py
src/pyantispam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyantispam/config/: __init__.py  config_manager.py
src/pyantispam/email/: __init__.py  email_client.py  email_processor.py
src/pyantispam/filters/: __init__.py  list_manager.py
src/pyantispam/learning/: __init__.py  feedback_processor.py
src/pyantispam/llm/: __init__.py  llm_classifier.py
src/pyantispam/ml/: __init__.py  feature_extractor.py  ml_classifier.py
src/pyantispam/stats/: __init__.py  stats_manager.py
